--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,25 +1,24 @@
 <div class="row header">
  
     <div class="container" >
-    <div class ="col-3 col-sm-3 col-sm-offset-1 col-lg-2 col-lg-offset-2" id="fremont">
-      <span id="location-name">Fremont</span><br>
-      <span id="address">4225 Fremont Ave N<br>
-      Seattle, WA 98103</span><br>
-      <span id="phone">(206) 545-7440</span><br><span id="hours">Tu-Fri: 11-9 &amp; Sat: 11-8</span> 
-    </div>
-      <div class="col-6 col-sm-4 col-lg-4 header-info">
-        <div class="container" style="
-    text-align: center";>
-      <a href= "/" ><%=image_tag("logo222.jpg", alt: "Logo", class:"img-responsive")%></a>
+      <div class="col-12 col-push-6 col-sm-4 col-sm-push-4 col-lg-4 col-lg-push-4 header-info">
+        <div style="text-align: center";>
+          <a href= "/" ><%=image_tag("logo222.jpg", alt: "Logo", class:"img-responsive")%></a>
         </div>
-    </div>
-    <div class ="col-3 col-sm-3 col-lg-2" id="ballard">
+      </div>
+      <div class ="col-6 col-pull-12 col-sm-3 col-sm-pull-4 col-sm-offset-1 col-lg-2 col-lg-offset-2 col-lg-pull-4" id="ballard">
       <span id="location-name">Ballard</span><br>
       <span id="address">6226 Seaview Ave NW<br>
       Seattle, WA 98107</span><br>
       <span id="phone">(206) 545-7440</span><br>
       <span id="hours">Tu-Sat: 11-9</span> 
     </div> 
+    <div class ="col-6 col-sm-3 col-lg-2" id="fremont">
+      <span id="location-name">Fremont</span><br>
+      <span id="address">4225 Fremont Ave N<br>
+      Seattle, WA 98103</span><br>
+      <span id="phone">(206) 545-7440</span><br><span id="hours">Tu-Fri: 11-9 &amp; Sat: 11-8</span> 
+    </div>
  </div> 
  <div class="col-12 col-lg-12 navbar-container" id="nav-cont">    
 
