changed footer shadow color

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,7 +2,7 @@
 /* UNIVERSAL */
 
 body {
-  background-color: #7dae41 !important;
+  background-color: #9dc86a !important;
   padding-left: 0px !important;
   padding-right: 0px !important;
 }
@@ -156,11 +156,11 @@ a.nav-link  {
 /*FOOTER#fd8779*/
 
 .footer {
-  background-color:#7dae41;
+  background-color:#9dc86a;
   font-size: 110%;
   height: 100px; 
   position: relative;
-  box-shadow: 0px -1px 2px #01cfa7;      
+  box-shadow: 0px -1px 2px #628933;      
 }
 
 footer.footer li{
