changed color of footer

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,7 +2,7 @@
 /* UNIVERSAL */
 
 body {
-  background-color: #9dc86a !important;
+  background-color: #7a5e71 !important;
   padding-left: 0px !important;
   padding-right: 0px !important;
 }
@@ -156,7 +156,7 @@ a.nav-link  {
 /*FOOTER#fd8779*/
 
 .footer {
-  background-color:#9dc86a;
+  background-color:#7a5e71;
   font-size: 110%;
   height: 100px; 
   position: relative;
@@ -301,6 +301,7 @@ margin: 0px 0px 0px 0px;
   font-size: 2.1em;
   font-weight:bold;
   margin-right: 5px;
+  color: #5e717a;
 }
 
 
