--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,17 +7,17 @@
         </div>
       </div>
       <div class ="col-6 col-pull-12 col-sm-3 col-sm-pull-4 col-sm-offset-1 col-lg-2 col-lg-offset-2 col-lg-pull-4" id="ballard">
-      <span id="location-name">Ballard</span><br>
-      <span id="address">6226 Seaview Ave NW<br>
-      Seattle, WA 98107</span><br>
-      <span id="phone">(206) 545-7440</span><br>
-      <span id="hours">Tu-Sat: 11-9</span> 
-    </div> 
-    <div class ="col-6 col-sm-3 col-lg-2" id="fremont">
       <span id="location-name">Fremont</span><br>
       <span id="address">4225 Fremont Ave N<br>
       Seattle, WA 98103</span><br>
-      <span id="phone">(206) 545-7440</span><br><span id="hours">Tu-Fri: 11-9 &amp; Sat: 11-8</span> 
+      <span id="phone">(206) 545-7440</span><br>
+      <span id="hours">Tu-Fri: 11-9 &amp; Sat: 11-8</span> 
+    </div> 
+    <div class ="col-6 col-sm-3 col-lg-2" id="fremont">
+      <span id="location-name">Ballard</span><br>
+      <span id="address">6226 Seaview Ave NW<br>
+      Seattle, WA 98107</span><br>
+      <span id="phone">(206) 789-3100</span><br><span id="hours">Tu-Fri: 11-9 &amp; Sat: 11-8</span> 
     </div>
  </div> 
  <div class="col-12 col-lg-12 navbar-container" id="nav-cont">    
