--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,7 +12,7 @@
       <div class="row">	
     	<div class="copyright">
 	  		&copy;2013 Paseo Caribbean<br>
-	  		Website by <a class="personal-logo" href="http://suminfo.herokuapp.com" target="_blank">Sum Info.</a>
+	  		Website by <a id="personal-logo" href="http://suminfo.herokuapp.com" target="_blank">Sum Info.</a>
 	  	</div>
 	  </div>	
       	 
