--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -30,10 +30,10 @@ body {
 .text-box{
   overflow: hidden;
   text-align: left;
-  background-color:#ffffff;
+  background-color:#f4f6f7;
   padding: 5px 13px 10px 13px;
-  opacity:0.92;
-  box-shadow: 0px 4px 2px 5px #ffffff;
+  opacity:0.94;
+  box-shadow: 0px 4px 2px 5px #f4f6f7;
  
   /*
   box-shadow: 10px 0px 2px 0px #ffffff, -10px 0px 2px 0px #ffffff, 0px -0px 8px 4px #ffffff;
@@ -160,7 +160,7 @@ a.nav-link  {
   font-size: 110%;
   height: 100px; 
   position: relative;
-  box-shadow: 0px -1px 2px #628933;      
+  box-shadow: 0px -1px 2px #aa90a2;      
 }
 
 footer.footer li{
@@ -282,7 +282,7 @@ margin: 0px 0px 0px 0px;
 
 #cash-only  {
     color:#768b95;
-    font-size:1.3em;
+    font-size:1.2em;
     text-align: center;  
 }
 
