--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -25,7 +25,7 @@
       </tr>
       <tr>
         <td></td>   
-        <td class="menu-fix"><em class="alt-id">Most Popular: Formerly known as the Midnight Cuban</em><span class="food-description">Pork shoulder slow-roasted in Paseo Marinade until falling apart.</span></td>
+        <td class="menu-fix"><em class="alt-id">Most Popular: Formerly known as the Midnight Cuban</em><br><span class="food-description">Pork shoulder slow-roasted in Paseo Marinade until falling apart.</span></td>
       </tr>
     </table>
     <table class="menu-item">
