--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,1 +1,25 @@
 <% provide(:title, 'Contact') %>
+<div id="ordering">
+	<h4>Before Calling:</h4>
+	<ul>
+		<li> - Know what you want to order.</li><br>
+		<li> -  Check the location you are calling. We are in Fremont and Ballard.</li>
+		<li> - If the phone is busy, keep trying. There's only one phone and
+        many callers.</li>
+        <li> - Speak quickly and clearly. One person both answers the phone and
+		manages the line.</li>
+		<li>- Be specific. Ordering a "Carribean" can mean many things. "Carribean
+		Roast Sandwich" is preferred.</li>
+	</ul>
+  <h4>When Arriving:</h4>
+  <ul>
+  	<li>If the line is long, skip it and come to the front, otherwise please wait.</li>
+  	<li>Your order won't be called until paid for. Make sure we know you are here.</li>
+  	<li>Remember we are cash only. Large orders have 10% gratuity added, but
+		gratuity with every order is appreciated.</li>
+	</ul>
+	<h4>Catering:</h4>
+	<p>Pricing and menu are the same, however if you want dinners to feed a
+group, we'll put all the items separately in large containers for you
+to set up as a buffet. Please give 48+ hours notice.</p>
+</div>
