--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,8 @@
 <div class="row header">
- 
     <div class="container" >
       <div class="col-12 col-push-6 col-sm-4 col-sm-push-4 col-lg-4 col-lg-push-4 header-info">
         <div style="text-align: center";>
-          <a href= "/" ><%=image_tag("logo222.jpg", alt: "Logo", class:"img-responsive")%></a>
+          <a href= "/" ><%=image_tag("logo11222.jpg", alt: "Logo", class:"img-responsive")%></a>
         </div>
       </div>
       <div class ="col-6 col-pull-12 col-sm-3 col-sm-pull-4 col-sm-offset-1 col-lg-2 col-lg-offset-2 col-lg-pull-4" id="ballard">
@@ -20,7 +19,7 @@
       <span id="phone">(206) 789-3100</span><br><span id="hours">Tu-Fri: 11-9 &amp; Sat: 11-8</span> 
     </div>
  </div> 
- <div class="col-12 col-lg-12 navbar-container" id="nav-cont">    
+ <div class="col-12 col-lg-12 navbar-container">    
 
   <div class="container">
   <div class = "navbar">
