--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -28,7 +28,7 @@ body {
 }
 
 .img-responsive  {
-  max-width: 75% !important;
+  max-width: 75%;
 }
 
 .text-box{
@@ -111,7 +111,7 @@ a.nav-link  {
      }
 
 .navbar .nav > .active > a {
-  color: #16994b !important;
+  color: #1bbb5c !important;
   background-color: #5e717a !important;
 }
 
