--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
     <div class="container" >
       <div class="col-12 col-push-6 col-sm-4 col-sm-push-4 col-lg-4 col-lg-push-4 header-info">
         <div style="text-align: center";>
-          <a href= "/" ><%=image_tag("logo11222.jpg", alt: "Logo", class:"img-responsive")%></a>
+          <a href= "/" ><%=image_tag("logo.jpg", alt: "Logo", class:"img-responsive")%></a>
         </div>
       </div>
       <div class ="col-6 col-pull-12 col-sm-3 col-sm-pull-4 col-sm-offset-1 col-lg-2 col-lg-offset-2 col-lg-pull-4" id="ballard">
