added icon to title, and new picture to home page with appropriate compression

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,7 +30,7 @@
           
           <li class="<%= 'active' if current_page?(press_path) %>"><%= link_to "Press", press_path, class:"nav-link" %></li>
           
-          <li class="<%= 'active' if current_page?(contact_path) %>"><%= link_to "Contact", contact_path, class:"nav-link"%></li>
+          <li class="<%= 'active' if current_page?(ordering_path) %>"><%= link_to "Ordering", ordering_path, class:"nav-link"%></li>
         </ul> 
      </div> 
  <!-- end of container-->
