--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
         });            
     });
   </script>
+  <link rel="shortcut icon" type="image/x-icon" href="assets/favicon2.png" />
 </head>
 <body>
       <%= render 'layouts/header' %>
