--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -69,7 +69,7 @@
         </tr>
         <tr>
           <td></td> 
-          <td class="food-description">Delectable slices of fish, saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)</td>
+          <td class="food-description">Delectable slices of fish saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)</td>
         </tr>
       </table>
       <table class="menu-item">
@@ -91,7 +91,7 @@
         </tr>
         <tr>
           <td></td>
-          <td class="menu-fix"><em class="alt-id">Formerly known as the Midnight Press.</em><span class="food-description">Caribbean Roast pork, banana peppers, smoked ham and swiss cheese, melted together on a hot press. (No lettuce or jalapenos)</span></td> 
+          <td class="menu-fix"><em class="alt-id">Formerly known as the Midnight Press.</em><br><span class="food-description">Caribbean Roast pork, banana peppers, smoked ham and swiss cheese, melted together on a hot press. (No lettuce or jalapenos)</span></td> 
         </tr>
       </table>
       <table class="menu-item">
@@ -164,10 +164,12 @@
       <tr>
         <td></td>
         <td><span class="food-description">Romaine lettuce, purple cabbage, pickled beets, and fresh cilantro, drizzled with our house vinaigrette.</span><br>
-        <em class="alt-id">Add chicken, pork, or tofu - $3.00</em><br>
-        <em class="alt-id">Add prawns, scallops, or fish - $4.00</em>
+        <em class="alt-id">Add chicken, pork, or tofu - $3.00</em>
         </td>
-      </tr> 
+      </tr>
+      <tr>
+        <td></td>
+        <td><em class="alt-id">Add prawns, scallops, or fish - $4.00</em></td>
     </table>
     <table class="menu-item doubled">
       <tr>
