--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,8 +8,8 @@
 	  </ol>
 	  <!-- Carousel items -->
 	  <div class="carousel-inner">
-	    <div class="active item"><%=image_tag("paseo12.jpg", alt: "restaurant")%></div>
-	    <div class="item"><%=image_tag("paseo12d.jpg", alt: "Logo")%></div>
+	    <div class="active item"><%=image_tag("IMG_1A.jpg", alt: "restaurant")%></div>
+	    <div class="item"><%=image_tag("IMG_2F1.jpg", alt: "Logo")%></div>
 	    <div class="item"><%=image_tag("IMG_3.jpg", alt: "Logo")%></div>
 	  </div>
 	  <!-- Carousel nav -->
