--- a/app/views/static_pages/press.html.erb
+++ b/app/views/static_pages/press.html.erb
@@ -1,22 +1,22 @@
-<% provide(:title, 'News') %>
+<% provide(:title, 'Press') %>
 	 <div id="cash-only"><em>Cash Only Establishment</em></div>
 	<article class="press-top">
 		<h4>Esquire</h4>
 			<p class="description">
-				In 2008, Esquire Magazine credited Paseo for having one of the "best sandwiches in America." Find us under the category <em>Cuban Meat Sandwich</em>.<br> Link: <a href="http://www.esquire.com/features/food-drink/sandwiches"target="_blank">The Best Sandwiches in America</a>
+				In 2008, <em>Esquire Magazine</em> credited Paseo for having one of the "best sandwiches in America." Find us under the category Cuban Meat Sandwich.<br> Link: <a href="http://www.esquire.com/features/food-drink/sandwiches"target="_blank">The Best Sandwiches in America</a>
 			</p>	
 	</article>
 	<article>
 		<h4>TLC</h4>
 			<p class="description">
-				In 2010, Paseo was included in <cite>TLC's TV series: <em>Best Food Ever</em></cite>.  We appeared in Episode 1, <cite>Sensational Sandwiches</cite> ranking 2nd.  Check out this blog post: <a href="http://www.slashfood.com/2010/05/04/tlc-premieres-best-food-ever/" target="_blank">Best Food Ever</a>, or view the episode on Netflix to hear a brief history of our restaurant.<br>
+				In 2010, TLC included Paseo in their TV series, <cite><em>Best Food Ever</em></cite>.  Appearing in episode 1<cite>, Sensational Sandwiches</cite>, we ranked 2nd! Check out this blog post: <a href="http://www.slashfood.com/2010/05/04/tlc-premieres-best-food-ever/" target="_blank">Best Food Ever</a>, or view the episode on Netflix to hear a brief history of the restaurant.<br>
 				Netflix Subscribers: <a href="http://movies.netflix.com/WiMovie/Best_Food_Ever/70222618?locale=en-US" target="_blank">Link to video</a>
 			</p>	 
 	</article>
 	<article>
 		<h4>The Seattle Times</h4>
 			<p class="description">
-				It's comes as no surprise Paseo has been featured in <cite>The Seattle Times</cite> on numerous occasions, here are some of our favorite articles over the past years.
+				It's comes as no surprise <cite>The Seattle Times</cite> have featured Paseo on numerous occasions, here are some of the best articles over the past years.
 			</p>	
 			<p class="description">
 				2006: <a href="http://community.seattletimes.nwsource.com/archive/?date=20060901&slug=deal01" target="_blank">A Midnight special hits the spot at lunch</a><br>
@@ -27,14 +27,14 @@
 	<article>
 		<h4>Seattle Magazine</h4>
 			<p class="description">
-				Paseo has been featured on <cite>Seattle Magazine's</cite> readers' choice list of <strong><em>Best Restaurants</em></strong> for the following years: 
+				<cite>Seattle Magazine's</cite> readers' choice list of <strong><em>Best Restaurants</em></strong> includes Paseo in the following years: 
 				<a href="http://www.seattlemag.com/article/best-restaurants-2010-readers-choice-winners-8" target="_blank">2010</a>, 
 				<a href="http://www.seattlemag.com/article/dining/best-seattle-restaurants-2011-directory" target="_blank">2011</a>, 
 				<a href="http://www.seattlemag.com/article/readers-choice-2012-best-restaurants" target="_blank">2012</a>, 
 				<a href="http://www.seattlemag.com/article/readers-choice-2013-best-restaurants-seattle" target="_blank">2013</a>.
 			</p>
 			<p class="description">
-				In 2010 we were also on their <em>Sandwich Bucket List</em>.<br> Link: 
+				Also featured in 2010 on their <em>Sandwich Bucket List</em>.<br> Link: 
 				<a href="http://www.seattlemag.com/article/seattles-48-best-sandwiches-bucket-list" target="_blank">Seattle's 48 Best Sandwiches</a>
 			</p>
 	</article>
@@ -45,7 +45,7 @@
 			Link: <a href="http://www.seattlemet.com/eat-and-drink/best-restaurants-2012/articles/best-restaurants-2012" target="_blank">Best Restaurants 2012</a>
 		</p>
 		<p class="description">
-			Under the location <em>Cuba</em>, comes Paseo's Caribbean Roast on the list of Seattle's best restaurants for cheap eats.<br>Link: <a href="http://www.seattlemet.com/eat-and-drink/cheap-eats-2012/articles/cheap-eats-world-tour-sandwiches-july-2012">Cheap Eats World Tour: Sandwiches</a>
+			On the Cheap Eats World Tour, a guide to Seattle's best and most affordable restaurants, comes Paseo's Caribbean Roast sandwich under the location<em> Cuba</em>.<br>Link: <a href="http://www.seattlemet.com/eat-and-drink/cheap-eats-2012/articles/cheap-eats-world-tour-sandwiches-july-2012">Cheap Eats World Tour: Sandwiches</a>
 		</p>		
 	</article>
 	<article>
@@ -57,7 +57,7 @@
 	<article id="article-bottom">
 	  <h4>Seattle P-I</h4>
 	  <p class="description">
-      	Paseo came out on top, receiving the #1 ranking on <cite>the Seattle P-I's list of their top 20 sandwiches.<br>
+      	On <cite>the Seattle P-I's list of their top 20 sandwiches, Paseo ranked #1.<br>
       	Link: <a href="http://blog.seattlepi.com/thebigblog/2012/09/11/seattles-20-best-sandwiches/#7298-1" target="_blank">Seattle's 20 best sandwiches</a>
 	</article>	
 	 <div id="cash-only"><em>Cash Only Establishment</em></div>	
