--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,16 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
   </script>
   <script>
-  $(document).ready(function () {
-        $('ul.nav > li').click(function (e) {
-            $('ul.nav > li').removeClass('active');
-            $(this).addClass('active');                
-        });            
-    });
-  </script>
-  <link rel="shortcut icon" type="image/x-icon" href="assets/favicon2.png" />
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-43170225-1', 'paseoseattle.com');
+  ga('send', 'pageview');
+
+</script>
+  <link rel="shortcut icon" type="image/png" href="assets/favicon3.png" />
 </head>
 <body>
       <%= render 'layouts/header' %>
@@ -31,5 +33,14 @@
       </div>    
   
     <%= render 'layouts/footer' %>
+
+  <script>
+  $(document).ready(function () {
+        $('ul.nav > li').click(function (e) {
+            $('ul.nav > li').removeClass('active');
+            $(this).addClass('active');                
+        });            
+    });
+  </script>
 </body>
 </html>
