--- a/app/views/static_pages/ordering.html.erb
+++ b/app/views/static_pages/ordering.html.erb
@@ -1,23 +1,24 @@
-<% provide(:title, 'Contact') %>
-<div id="ordering">
+<% provide(:title, 'Ordering') %>
+<div id="ordering col-12 col-sm-12 col-lg-12">
 	<h4>Before Calling:</h4>
-	<ul>
-		<li> - Know what you want to order.</li><br>
-		<li> -  Check the location you are calling. We are in Fremont and Ballard.</li>
-		<li> - If the phone is busy, keep trying. There's only one phone and
+	<ul id="ordering-info">
+		<li>Know what you want to order.</li>
+		<li>Check the location you are calling: Fremont or Ballard.</li>
+		<li>If the phone is busy, keep trying: There's only one phone and
         many callers.</li>
-        <li> - Speak quickly and clearly. One person both answers the phone and
+        <li>  Speak quickly and clearly: One person both answers the phone and
 		manages the line.</li>
-		<li>- Be specific. Ordering a "Carribean" can mean many things. "Carribean
+		<li> Be specific: Ordering a "Caribbean" can mean many things, "Caribbean
 		Roast Sandwich" is preferred.</li>
 	</ul>
   <h4>When Arriving:</h4>
-  <ul>
-  	<li>If the line is long, skip it and come to the front, otherwise please wait.</li>
-  	<li>Your order won't be called until paid for. Make sure we know you are here.</li>
-  	<li>Remember we are cash only. Large orders have 10% gratuity added, but
-		gratuity with every order is appreciated.</li>
+  <ul id="ordering-info">
+  	<li>If the line is long, skip it and come to the front, otherwise please wait.</li><br>
+  	<li>Your order won't be called until paid for. Make sure we know you are here.</li><br>
+  	<li>Remember we are cash only. Large orders have 10% gratuity added, but gratuity with every order is appreciated.</li>
 	</ul>
+
+	<br>
 	<h4>Catering:</h4>
 	<p>Pricing and menu are the same, however if you want dinners to feed a
 group, we'll put all the items separately in large containers for you
