--- a/app/views/static_pages/ordering.html.erb
+++ b/app/views/static_pages/ordering.html.erb
@@ -1,6 +1,9 @@
 <% provide(:title, 'Ordering') %>
-
-  <div class="col-12 col-sm-6 col-lg-6">	
+  
+  <div class="col-12 col-sm-6 col-sm-push-6 col-lg-6 col-lg-push-6">
+  	<%=image_tag("IMG_84711.jpg", alt: "cash only photo", class:"img-responsive")%>
+  </div>
+  <div class="col-12 col-sm-6 col-sm-pull-6 col-lg-6 col-lg-pull-6">
 	<h4>Before Calling:</h4>
 	<ul id="ordering-info">
 		<li>Know what you want to order.</li>
@@ -21,6 +24,3 @@
 	<h4>Catering:</h4>
 	<p id="catering">Paseo offers catering for large groups or events. All items on the menu are available but please give at least 2 days notice prior to the date needed.   </p>
 </div>
-<div class="col-12 col-sm-6 col-lg-6">
-  	<%=image_tag("IMG_84711.jpg", alt: "cash only photo", class:"img-responsive order-img")%>
-  </div>
